fix top navigation mobile view tab padding

--- a/src/styles/layout/page.less
+++ b/src/styles/layout/page.less
@@ -19,7 +19,7 @@
       font-size: @page-header-font-size;
 
       .container-pod {
-        padding-top: @base-spacing-unit * 1/3;
+        padding-top: 0;
       }
 
       .tab-item {
